fix(ClasspathCompromisingModuleFactory): allow code from either class or jars of module directories