@@ -3,6 +3,8 @@
 
 package org.terasology.engine.core.module;
 
+import com.google.common.base.MoreObjects;
+import com.google.common.collect.ImmutableSet;
 import org.reflections.util.ClasspathHelper;
 import org.terasology.gestalt.module.Module;
 import org.terasology.gestalt.module.ModuleFactory;
@@ -14,7 +16,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 class ClasspathCompromisingModuleFactory extends ModuleFactory {
     @Override
@@ -29,28 +30,46 @@ class ClasspathCompromisingModuleFactory extends ModuleFactory {
     @Override
     public Module createArchiveModule(ModuleMetadata metadata, File archive) throws IOException {
         Module module = super.createArchiveModule(metadata, archive);
-        return module;
+        return new Module(
+                module.getMetadata(), module.getResources(),
+                module.getClasspaths(), module.getModuleManifest(),
+                new ClassesInModule(module));
     }
 
     static class ClassesInModule implements Predicate<Class<?>> {
 
         private final Set<URL> classpaths;
         private final ClassLoader[] classLoaders;
+        private final String name;
 
-        public ClassesInModule(Module module) {
+        ClassesInModule(Module module) {
             classpaths = module.getClasspaths().stream().map(f -> {
                 try {
-                    return f.toURI().toURL();
+                    URL url = f.toURI().toURL();
+                    if (f.getName().endsWith(".jar")) {
+                        // Code from jars has a `jar:` URL.
+                        return new URL("jar", null, url.toString() + "!/");
+                    }
+                    return url;
                 } catch (MalformedURLException e) {
                     throw new RuntimeException(e);
                 }
-            }).collect(Collectors.toSet());
+            }).collect(ImmutableSet.toImmutableSet());
             classLoaders = module.getModuleManifest().getConfiguration().getClassLoaders();
+            name = module.getId().toString();
         }
 
         @Override
         public boolean test(Class<?> aClass) {
-            return classpaths.contains(ClasspathHelper.forClass(aClass, classLoaders));
+            URL classUrl = ClasspathHelper.forClass(aClass, classLoaders);
+            return classpaths.contains(classUrl);
+        }
+
+        @Override
+        public String toString() {
+            return MoreObjects.toStringHelper(this)
+                    .add("name", name)
+                    .toString();
         }
     }
 }
